--- a/sass/_com.scss
+++ b/sass/_com.scss
@@ -52,9 +52,10 @@
             .cel{
                 color: $gato_rojo;
             }
-            h5{
+           .comunicate{
                 padding: 10px;
-                color: $gato_negro;
+                color:rgb(90, 11, 83);
+                font-size: 30px;
             }
             
             .mapa{
