--- a/css/estilo.css
+++ b/css/estilo.css
@@ -279,10 +279,10 @@ footer div img {
 }
 
 .tittienda {
-  background-color: aquamarine;
+  background-color: blue;
   text-align: center;
   width: 100%;
-  color: black;
+  color: white;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
