--- a/sass/_tienda.scss
+++ b/sass/_tienda.scss
@@ -36,10 +36,10 @@
 }
 
 .tittienda {
-    background-color: aquamarine;
+    background-color: $gato_azul;
     text-align: center;
     width: 100%;
-    color: $gato_negro;
+    color: $gato_blanco;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
